# ping_pong_pal

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: card_reader.py  elo_calculator.py  main.py  player_database.py
app/templates/: index.html
tests/: test_elo_calculator.py  test_player_database.py
